# abb_motion_program_exec

./: .gitignore  LICENSE.txt  README.md  abb_1200_5_90_motion_program_robot_default_config.yml  abb_motion_program_exec.mod  abb_motion_program_exec_client.py  abb_motion_program_exec_robotraconteur.py  example_client.py  experimental.robotics.motion_program.robdef  pyproject.toml  setup.py
config/: abb_6700_150_320_motion_program_robot_default_config.yml  abb_multimove_motion_program_robot_default_config.yml
doc/: robot_multimove_setup_manual.md  robot_setup_manual.md  robot_setup_robotware_addin.md
docs/: conf.py  egm.md  index.rst  readme.md  requirements.txt  robot_multimove_setup_manual.md  robot_setup.rst  robot_setup_manual.md  robot_setup_robotware_addin.md
docs/abb_motion_program_exec/: api_reference.rst
examples/: example.py  multimove_example.py  multimove_preempt_example.py  multimove_relative_example.py  preempt_example.py
examples/egm/: egm_joint_target_example.py  egm_path_correction_example.py  egm_pose_target_example.py
examples/robotraconteur/: example_client.py  example_client_confdata.py  example_client_egm_realtime_feedback.py  multimove_example_client.py
robot/HOME/: error_reporter.mod  motion_program_exec.mod  motion_program_exec_egm.mod  motion_program_logger.mod  motion_program_shared.sys  mp.sys
robot/config_params/: EIO.cfg  SYS.cfg
robot/config_params_egm/: EIO.cfg  MOC.cfg  SYS.cfg
robot/config_params_multimove/: EIO.cfg  SYS.cfg
robot/robotware_addin/: install.cmd
robot_multimove/HOME/: error_reporter.mod  (+3 more)
(+27 files in other folders)
